# GaussianBeam

./: .gitignore  CMakeLists.txt  README.md
gui/: GaussianBeam.qrc  GaussianBeamModel.cpp
po/: GaussianBeam_fr.ts
